# slint-hello

./: Cargo.toml  build.rs
.github/workflows/: ci.yml
src/: main.rs
ui/: app-window.slint
